feat: add new logic